@@ -7561,7 +7561,7 @@ AT_DATA([prog.cob], [
 
 
 
-          *> check that multiple empty lines are handled correctly
+      *> check that multiple empty lines are handled correctly
 
 
 
@@ -9023,62 +9023,62 @@ Line:    413            IF
 Line:    418            READ
 Line:    419            IF
 Line:    424            PERFORM
-Line:    425            UNTIL
+Line:    424            UNTIL
 Line:    426            DISPLAY
 Line:    429            CALL
 Line:    430            READ
 Line:    434            ADD
-Line:    425            UNTIL
+Line:    424            UNTIL
 Line:    426            DISPLAY
 Line:    429            CALL
 Line:    430            READ
 Line:    434            ADD
-Line:    425            UNTIL
+Line:    424            UNTIL
 Line:    426            DISPLAY
 Line:    429            CALL
 Line:    430            READ
 Line:    434            ADD
-Line:    425            UNTIL
+Line:    424            UNTIL
 Line:    426            DISPLAY
 Line:    429            CALL
 Line:    430            READ
 Line:    434            ADD
-Line:    425            UNTIL
+Line:    424            UNTIL
 Line:    426            DISPLAY
 Line:    429            CALL
 Line:    430            READ
 Line:    434            ADD
-Line:    425            UNTIL
+Line:    424            UNTIL
 Line:    426            DISPLAY
 Line:    429            CALL
 Line:    430            READ
 Line:    434            ADD
-Line:    425            UNTIL
+Line:    424            UNTIL
 Line:    426            DISPLAY
 Line:    429            CALL
 Line:    430            READ
 Line:    434            ADD
-Line:    425            UNTIL
+Line:    424            UNTIL
 Line:    426            DISPLAY
 Line:    429            CALL
 Line:    430            READ
 Line:    434            ADD
-Line:    425            UNTIL
+Line:    424            UNTIL
 Line:    426            DISPLAY
 Line:    429            CALL
 Line:    430            READ
 Line:    434            ADD
-Line:    425            UNTIL
+Line:    424            UNTIL
 Line:    426            DISPLAY
 Line:    429            CALL
 Line:    430            READ
 Line:    434            ADD
-Line:    425            UNTIL
+Line:    424            UNTIL
 Line:    426            DISPLAY
 Line:    429            CALL
 Line:    430            READ
 Line:    434            ADD
-Line:    425            UNTIL
+Line:    424            UNTIL
 Line:    436            IF
 Line:    439            DISPLAY
 Line:    442            DISPLAY
@@ -9091,47 +9091,47 @@ Line:    456            PERFORM
 Line:    458            DISPLAY
 Line:    461            READ
 Line:    465            ADD
-Line:    457            UNTIL
+Line:    456            UNTIL
 Line:    458            DISPLAY
 Line:    461            READ
 Line:    465            ADD
-Line:    457            UNTIL
+Line:    456            UNTIL
 Line:    458            DISPLAY
 Line:    461            READ
 Line:    465            ADD
-Line:    457            UNTIL
+Line:    456            UNTIL
 Line:    458            DISPLAY
 Line:    461            READ
 Line:    465            ADD
-Line:    457            UNTIL
+Line:    456            UNTIL
 Line:    458            DISPLAY
 Line:    461            READ
 Line:    465            ADD
-Line:    457            UNTIL
+Line:    456            UNTIL
 Line:    458            DISPLAY
 Line:    461            READ
 Line:    465            ADD
-Line:    457            UNTIL
+Line:    456            UNTIL
 Line:    458            DISPLAY
 Line:    461            READ
 Line:    465            ADD
-Line:    457            UNTIL
+Line:    456            UNTIL
 Line:    458            DISPLAY
 Line:    461            READ
 Line:    465            ADD
-Line:    457            UNTIL
+Line:    456            UNTIL
 Line:    458            DISPLAY
 Line:    461            READ
 Line:    465            ADD
-Line:    457            UNTIL
+Line:    456            UNTIL
 Line:    458            DISPLAY
 Line:    461            READ
 Line:    465            ADD
-Line:    457            UNTIL
+Line:    456            UNTIL
 Line:    458            DISPLAY
 Line:    461            READ
 Line:    465            ADD
-Line:    457            UNTIL
+Line:    456            UNTIL
 Line:    468            CLOSE
 Line:    470            OPEN
 Line:    471            MOVE
